# nlp-with-transformers

./: .gitignore  .gitmodules  README.md
workbench/ch03/: .gitignore  Makefile  README.md  pyproject.toml  train.py
workbench/ch03/data/: dataset.py
workbench/ch03/models/: classifier.py  transfomer.py
workbench/ch03/models/module/: encoder.py
workbench/ch03/models/module/base/: attention.py  point_wise_feed_forword.py
workbench/ch03/models/modules/: __init__.py  decoder.py
workbench/ch03/models/modules/base/: attention.py  embedding.py
workbench/ch03/notebook/: preprocessiong.ipynb
workbench/ch03/tests/test_models/test_base/: test_attention.py
workbench/ch03/tests/test_utils/: test_utils.py
workbench/ch03/utils/: __init__.py  logging.py
